fix(业务沉淀和问题总结): cpu使用率低但是负载高文章的图片脱敏

--- a/src/business_issue_accumulations/003-服务器CPU使用率较低但系统负载高.md
+++ b/src/business_issue_accumulations/003-服务器CPU使用率较低但系统负载高.md
@@ -1,6 +1,6 @@
----
+```
 title: 003-服务器CPU使用率较低但系统负载高
----
+```
 
 
 
@@ -77,7 +77,7 @@ top -Hp 23180
 |        | 26618  | 67fa   |              | 无                                                           |
 |        | 10259  | 2813   |              | 无                                                           |
 |        | ....   | .....  |              | 无                                                           |
-|        | 18912  | 49e0   | xxxxxx-weibo | <img src="./003-服务器CPU使用率较低但系统负载高/image-20240228181054190.png" alt="image-20240228181054190" style="zoom:100%;" /> |
+|        | 18912  | 49e0   | xxxxxx-weibo | <img src="./003-服务器CPU使用率较低但系统负载高/image-20240229101309255.png" alt="image-20240229101309255"  /> |
 
 大部分线程 id 已经在当前运行中线程找不到了
 
